#106.194: API cash.account.create delete icon_link
